fix spacings

--- a/src/utils/utils.scss
+++ b/src/utils/utils.scss
@@ -4,7 +4,6 @@
 .sa-commercial {
   box-sizing: border-box;
   padding: var(--sjs2-spacing-static-x150, 12px) var(--sjs2-spacing-static-x600, 48px);
-  margin-bottom: var(--sjs2-spacing-x300, 24px);
   justify-content: center;
   width: 100%;
   background: var(--sjs2-color-bg-brand-primary, #19B394);
