--- a/src/visualizationPanel.scss
+++ b/src/visualizationPanel.scss
@@ -15,14 +15,6 @@
   }
 }
 
-.sa-panel__header.sa-toolbar--has-content {
-  margin-inline: var(--sjs2-spacing-x300, 24px);
-
-  @media screen and (max-width: 600px) {
-    margin-inline: var(--sjs2-spacing-x150, 12px);
-  }
-}
-
 .sa-panel__header > .sa-toolbar {
   gap: var(--sjs2-spacing-x300, 24px);
 }
@@ -32,12 +24,10 @@
 }
 
 .sa-panel__content {
-  padding: var(--sjs2-spacing-x300, 24px);
-  width: calc(100% - 2 * var(--sjs2-spacing-x300, 24px));
+  margin-inline-start: calc(-1 * var(--sjs2-spacing-x300, 24px));
 
   @media screen and (max-width: 600px) {
-    padding: var(--sjs2-spacing-x150, 12px);
-    width: calc(100% - 2 * var(--sjs2-spacing-x150, 12px));
+    margin-inline-start: calc(-1 * var(--sjs2-spacing-x150, 12px));
   }
 }
 
@@ -72,7 +62,7 @@
 .sa-question-layouted {
   overflow: visible;
   position: absolute;
-  width: calc(100% - var(--sjs2-spacing-x300, 24px) * 2);
+  // width: calc(100% - var(--sjs2-spacing-x300, 24px) * 2);
   margin-inline-start: var(--sjs2-spacing-x300, 24px);
   margin-top: var(--sjs2-spacing-x300, 24px);
   border-radius: var(--sjs2-radius-container-panel, 16px);
@@ -80,12 +70,12 @@
   box-shadow: var(--sjs2-border-offset-x-surface-default, 0) var(--sjs2-border-offset-y-surface-default, 0) var(--sjs2-border-blur-surface-default, 0) var(--sjs2-border-spread-surface-default, 1px) var(--sjs2-color-utility-shadow-surface-default, rgba(17, 16, 20, 0.10));
 
   @media screen and (min-width: 1400px) {
-    width: calc(50% - var(--sjs2-spacing-x300, 24px) * 1.5);
+    // width: calc(50% - var(--sjs2-spacing-x300, 24px) * 1.5);
   }
   @media screen and (max-width: 600px) {
     margin-inline-start: var(--sjs2-spacing-x150, 12px);
     margin-top: var(--sjs2-spacing-x150, 12px);
-    width: calc(100% - var(--sjs2-spacing-x150, 12px) * 2);
+    // width: calc(100% - var(--sjs2-spacing-x150, 12px) * 2);
   }
 }
 
