--- a/src/visualizerBase.scss
+++ b/src/visualizerBase.scss
@@ -2,8 +2,12 @@
 
 .sa-visualizer-wrapper {
   min-width: 450px;
-  // padding-top: var(--sjs2-spacing-x300, 24px);
+  padding: var(--sjs2-spacing-x300, 24px);
   background: var(--sjs2-color-utility-surface-muted, rgba(28, 27, 32, 0.05));
+
+  @media screen and (max-width: 600px) {
+    padding: var(--sjs2-spacing-x150, 12px);
+  }
 }
 
 .sa-visualizer__toolbar {
